# HW1-FAST-AQ-Parser

./: pyproject.toml
seqparser/: seq.py
tests/: test_parsers.py  test_transcribe.py
